--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ tags_path : /tags.html
 # Masthead title
 masthead_link: http://dryden.alternate.hackerstorytelling.com
 masthead_font_size: 65
-masthead_title: '{"Dryden":"Hacker Storytelling"}'
+masthead_title: '{"Dryden":<br />"Hacker Storytelling"}'
 
 # Feature
 feature_title: API Design Providers Guide
